Split to app.py and routes.py and added templates

--- a/application/templates/newuser.html
+++ b/application/templates/newuser.html
@@ -1,13 +1,13 @@
-<h1>Log in</h1>
+<h1>Create new user</h1>
 
-<form action="/login" method="POST">
+<form action="/newuser" method="POST">
 Email:
 <input type="text" name="email">
 <br>
 Password:
 <input type="text" name="password">
 <br>
-<input type="submit" value="Login">
+<input type="submit" value="Create account & login">
 </form>
 
 <p>
