--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -2,22 +2,13 @@
 <h1>Can you spot the bot experiment</h1>
 
 
-
 {% if session.email %}
 <p>Logged in with email {{ session.email }}</p>
-<a href="/logout">Log out</a>
-
-{% else %}
-<form action="/login" method="POST">
-<p>Email:<br>
-<input type="text" name="email"></p>
-<p>Password:<br>
-<input type="password" name="password"></p>
-<input type="submit" value="Login">
-</form>
-{% endif %}
-
-
-<!-- <input type="submit" value="Login">
+<a href="/experiment">Start the experiment</a>
 <br>
-<input type="submit" value="New user"> -->
+<a href="/logout">Log out</a>
+{% else %}
+<a href="/login">Log in</a>
+<br>
+<a href="/newuser">New user</a>
+{% endif %}
