login and new user implemented

--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -1,5 +1,7 @@
 <h1>Log in</h1>
 
+<p>Your email works as your username in this app.</p>
+
 <form action="/login" method="POST">
 Email:
 <input type="text" name="email">
