--- a/application/templates/newuser.html
+++ b/application/templates/newuser.html
@@ -1,5 +1,7 @@
 <h1>Create new user</h1>
 
+<p>Your email will work as your username in this app.</p>
+
 <form action="/newuser" method="POST">
 Email:
 <input type="text" name="email">
