Added customized error messages and password protection in form

--- a/templates/invalid.html
+++ b/templates/invalid.html
@@ -1,6 +1,6 @@
 <h1>ERROR</h1>
 
-<p>An account already exists with that email or you entered an invalid email/password!</p>
+{{ message }}
 
 <p>
 <a href="/">Return to main menu</a>
