--- a/templates/newuser.html
+++ b/templates/newuser.html
@@ -7,7 +7,7 @@ Email:
 <input type="text" name="email">
 <br>
 Password:
-<input type="text" name="password">
+<input type="password" name="password">
 <br>
 <input type="submit" value="Create account & login">
 </form>
