--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -10,11 +10,15 @@
 <hr>
 {% endfor %}
 
-<p></p>
+<br></br>
 
+<form action="/experiment" method="POST">
 {% for i in profiles %}
 {{ i.name }} is a
 <input type="radio" name={{ i.name }} value="1"> human
 <input type="radio" name={{ i.name }} value="2"> bot
 <p></p>
 {% endfor %}
+
+<input type="submit" value="Submit">
+</form>
