--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -15,8 +15,8 @@
 <form action="/experiment" method="POST">
 {% for i in profiles %}
 {{ i.name }} is a
-<input type="radio" name={{ i.0.name }} value="1"> human
-<input type="radio" name={{ i.0.name }} value="2"> bot
+<input type="radio" name={{ i.name }} value="1"> human
+<input type="radio" name={{ i.name }} value="2"> bot
 <p></p>
 {% endfor %}
 
