--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,4 +1,16 @@
 <h1>Admin view</h1>
+<h2>Statistics</h2>
 
+<p>Number of responses: {{ responses }}</p>
+<p>Average accuracy: {{ accuracy }}</p>
+
+<hr>
+<h2>List of respondents</h2>
+
+{% for i in participants %}
+{{ i.email }}
+<br>
+{% endfor %}
+<hr>
 <br>
 <a href="/logout">Log out</a>
