--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,7 +2,7 @@
 <h2>Statistics</h2>
 
 <p>Number of responses: {{ responses }}</p>
-<p>Average accuracy: {{ accuracy }}</p>
+<p>Average accuracy: {{'%0.2f' % accuracy}}%</p>
 
 <hr>
 <h2>List of respondents</h2>
