--- a/templates/invalid.html
+++ b/templates/invalid.html
@@ -1,6 +1,11 @@
-<h1>ERROR</h1>
+{% extends "layout.html" %}
+{% block content %}
+
+<h2>Error</h2>
 
 {{ message }}
 
 <p>
 <a href="/">Return to main menu</a>
+
+{% endblock %}
