--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block content %}
+
 <h1>Log in</h1>
 
 <p>Your email works as your username in this app.</p>
@@ -14,3 +17,5 @@ Password:
 
 <p>
 <a href="/">Return to main menu</a>
+
+{% endblock %}
