--- a/templates/newuser.html
+++ b/templates/newuser.html
@@ -1,4 +1,7 @@
-<h1>Create new user</h1>
+{% extends "layout.html" %}
+{% block content %}
+
+<h2>Create new user</h2>
 
 <p>Your email will work as your username in this app.</p>
 <p>Both email and password should be between 4 and 30 characters.</p>
@@ -18,3 +21,5 @@ Repeat password:
 
 <p>
 <a href="/">Return to main menu</a>
+
+{% endblock %}
