--- a/templates/terms.html
+++ b/templates/terms.html
@@ -1,4 +1,7 @@
-<h1>Disclaimer</h1>
+{% extends "layout.html" %}
+{% block content %}
+
+<h2>Disclaimer</h2>
 
 <p>We believe there might be discomforts to you in this research study.</p>
 
@@ -15,3 +18,5 @@
 <br>
 <input type="submit" value="Submit">
 </form>
+
+{% endblock %}
