--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
-<title>Can you spot the bot experiment</title>
-<h1>Can you spot the bot experiment</h1>
+{% extends "layout.html" %}
+{% block content %}
+
+<h2>Main menu</h2>
 
 
 {% if session.email %}
@@ -12,3 +14,5 @@
 <br>
 <a href="/newuser">New user</a>
 {% endif %}
+
+{% endblock %}
