improvements to layout and buttons

--- a/static/main.css
+++ b/static/main.css
@@ -1,9 +1,39 @@
 body {
     margin: auto;
-    max-width: 45em;
+    max-width: 35em;
     font-family: 'Franklin Gothic', 'Arial', sans-serif;
 }
 
 img {
   border-radius: 50%;
+  display: block;
+  float: left;
+  padding: 15px;
+}
+
+button {
+    display: inline-block;
+    padding: 10px 30px;
+    border-radius: 20px;
+    margin: .2em;
+    text-decoration: none;
+    color: #000;
+    font-size: 16px;
+    font-family: 'Franklin Gothic', 'Arial', sans-serif;
+    color: white;
+    background-color: #1DA1F2;
+    box-shadow: none;
+}
+
+a {
+    width: 150px;
+    display: inline-block;
+    padding: 10px 30px;
+    border-radius: 20px;
+    margin: .2em;
+    text-decoration: none;
+    color: #000;
+    font-family: 'Franklin Gothic', 'Arial', sans-serif;
+    color: white;
+    background-color: #1DA1F2;
 }
