--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<h1>Log in</h1>
+<h2>Log in</h2>
 
 <p>Your email works as your username in this app.</p>
 
@@ -12,10 +12,9 @@ Email:
 Password:
 <input type="password" name="password">
 <br>
-<input type="submit" value="Login">
+<button type="submit" value="Login">Login</button>
 </form>
 
-<p>
 <a href="/">Return to main menu</a>
 
 {% endblock %}
