--- a/templates/newuser.html
+++ b/templates/newuser.html
@@ -16,10 +16,9 @@ Password:
 Repeat password:
 <input type="password" name="passwordrepeat">
 <br>
-<input type="submit" value="Create account & login">
+<button type="submit" value="Create account & login">Create account & login</button>
 </form>
 
-<p>
 <a href="/">Return to main menu</a>
 
 {% endblock %}
