--- a/templates/terms.html
+++ b/templates/terms.html
@@ -16,7 +16,7 @@
 <br>
 <input type="radio" name="response" value=0> Decline and go back to main menu
 <br>
-<input type="submit" value="Submit">
+<button type="submit" value="Submit">Submit</button>
 </form>
 
 {% endblock %}
