--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -27,7 +27,7 @@
 
 {% endfor %}
 
-<input type="submit" value="Submit">
+<button type="submit" value="Submit">Submit</button>
 </form>
 
 {% endblock %}
