--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -5,7 +5,7 @@
 <br>
 
 {% for i in profiles %}
-<img src="{{ url_for('show', id=i.id) }}" width="50" height="50">
+<img src="{{ url_for('show', image_id=i.id) }}" width="50" height="50">
 <b>{{ i.name }}</b> 
 <span style="color: #999999">{{ i.handle }}
 &#183 12min</span>
